<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/bienvenue" />

        <View
            style="@style/Divider"
            android:layout_width="300dp"
            android:layout_gravity="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="33dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pays" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/categorie" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sources" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="185dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/source_example" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mots_cles" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="185dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/keyword_example" />

        </LinearLayout>

        <Button
            android:id="@+id/lancer_la_recherche"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lancer_la_recherche" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>